fix: align edit dialog label

--- a/packages/material/scss/scheduler/_layout.scss
+++ b/packages/material/scss/scheduler/_layout.scss
@@ -146,7 +146,10 @@
         .k-edit-form-container { width: 390px; }
 
         .k-edit-label { width: auto; }
-        .k-edit-field { width: auto; }
+        .k-edit-field { 
+            width: auto; 
+            align-items: center;
+        }
 
     }
 
